# Void_CPP

./: .gitignore  .gitmodules  CMakeLists.txt  CarballHandling.h  Doxyfile  README.md  create_submodels_structure.py  requirements.txt
Configs/: RecoveryConfig.yaml
batch_scripts/: copy_latest_checkpoint.bat  copy_latest_checkpoint_to_rlbot.bat  create_symbolic_links.bat  start_rocketsim_vis.bat
carball_output/: __ball.csv  __game.csv  analyzer.json  metadata.json  player_11473689546484543479.csv  player_13588231993798409323.csv
checkpoints/28920960/: PPO_CRITIC.lt  PPO_CRITIC_OPTIM.lt  PPO_POLICY.lt  PPO_POLICY_OPTIM.lt  RUNNING_STATS.json
checkpoints/29522784/: PPO_CRITIC.lt  PPO_CRITIC_OPTIM.lt  PPO_POLICY.lt  PPO_POLICY_OPTIM.lt  RUNNING_STATS.json
checkpoints/30124800/: PPO_CRITIC.lt  PPO_CRITIC_OPTIM.lt  PPO_POLICY.lt  PPO_POLICY_OPTIM.lt  RUNNING_STATS.json
checkpoints/30726432/: PPO_CRITIC.lt  PPO_CRITIC_OPTIM.lt  PPO_POLICY.lt  PPO_POLICY_OPTIM.lt  RUNNING_STATS.json
checkpoints/31328736/: PPO_CRITIC.lt  PPO_CRITIC_OPTIM.lt  PPO_POLICY.lt  PPO_POLICY_OPTIM.lt  RUNNING_STATS.json
docs/: Ceiling_pinch.md
include/: ActionParser.h  LearnerConfigUtils.h  LoggedCombinedReward.h  LoggerUtils.h  Loggers.h  ObsBuilder.h  RLBotClient.h  Rewards.h  States.h  TerminalConditions.cpp  TerminalConditions.h  WandbConfig.h
include/ActionParsers/Selector/: SelectorParser.h
include/CeilingPinch/: CeilingPinchUtils.h
include/CeilingPinch/ActionParsers/: CeilingPinchActionParser.h
include/CeilingPinch/ObsBuilders/: CeilingPinchObsBuilder.h
include/CeilingPinch/Rewards/: CeilingPinchReward.h
include/CeilingPinch/StateSetters/: CeilingPinchStateSetter.h
include/DoubleTap/: DoubleTapUtils.h
include/DoubleTap/ActionParsers/: DoubleTapActionParser.h
include/DoubleTap/ObsBuilders/: DoubleTapObsBuilder.h
include/DoubleTap/Rewards/: DoubleTapReward.h  GroundDoubleTapReward.h  WallDoubleTapReward.h
include/DoubleTap/StateSetters/: DoubleTapStateSetter.h  GroundDoubleTapState.h
include/GroundPinch/: GroundPinchUtils.h
include/GroundPinch/ActionParsers/: GroundPinchActionParser.h
include/GroundPinch/ObsBuilders/: GroundPinchObsBuilder.h
include/GroundPinch/Rewards/: GroundPinchReward.h
include/GroundPinch/StateSetters/: GroundPinchStateSetter.h
include/Logging/: LoggableReward.h  LoggedCombinedReward.h  TestReward.h
include/ObsBuilders/Dashes/: DashObsBuilder.cpp  DashObsBuilder.h
include/ObsBuilders/Selector/: SelectorObs.h
include/Pinch/: PinchUtils.h
include/Pinch/Rewards/: PinchReward.h
include/Recovery/: RecoveryUtils.h
include/Recovery/ActionParsers/: RecoveryActionParser.h
include/Recovery/ObsBuilders/: DashObsBuilder.h  RecoveryObsBuilder.h
include/Recovery/Rewards/: IsFlippingReward.h  RecoveryReward.h  TimeBetweenFlipsPunishment.h
include/Recovery/StateSetters/: AboveGroundState.h  RecoveryStateSetter.h
include/Replays/: CarballHandling.h  ReplayFrame.h  ReplayLoader.h  ReplaySaver.h  ReplaySetter.h  ReplayUtils.h  csv.h
include/Replays/RCF/: AbstractRCF.h  CommonRCFs.h  MultiRCF.h  RCFUtils.h  ReplayFilter.h  StateQueue.h  WrapperRCF.h
include/Rewards/Dashes/: IsFlippingReward.h  TimeBetweenFlipsPunishment.h
include/Rewards/DoubleTap/: DoubleTapReward.h  GroundDoubleTapReward.h
include/Rewards/Pinch/: CeilingPinch.h  GroundPinch.h  Pinch.h  PinchUtils.h  README.md  TeamPinch.h  WallPinch.h
include/Rewards/Selector/: SelectorReward.h
include/Selector/: SelectorChoice.h  SelectorUtils.h  Submodel.h
include/Selector/ActionParsers/: SelectorActionParser.h
include/Selector/ObsBuilders/: SelectorObsBuilder.h
include/Selector/Rewards/: SelectorReward.h
include/Selector/StateSetters/: SelectorStateSetter.h
include/States/DoubleTap/: DoubleTapState.h  GroundDoubleTapState.h
include/States/Pinch/: CeilingPinchState.h  WallPinchState.h
include/States/Recovery/: AboveGroundState.h
include/TeamPinch/: TeamPinchUtils.h
include/TeamPinch/ActionParsers/: TeamPinchActionParser.h
include/TeamPinch/ObsBuilders/: TeamPinchObsBuilder.h
include/Utils/: DashesUtils.h  DoubleTapUtils.cpp  DoubleTapUtils.h  LoggerUtils.h  LoggingUtils.h  PinchUtils.h  VoidUtils.h
include/WallPinch/: WallPinchUtils.h
mains/: CeilingPinchMain.cpp  DoubleTapMain.cpp  GroundPinchMain.cpp  RCFMain.cpp  RLBotMain.cpp  RecoveryMain.cpp  SelectorMain.cpp  TeamPinchMain.cpp  VoidReplaysConverter.cpp  WallPinchMain.cpp  main.cpp
python_scripts/: db_interface.py  live_instance.py  metric_receiver.py  obsBuilders.py  parsers.py  render_receiver.py  setters.py  start_live.bat  temp.py  utils.py
replays/tests/: ae6bcec7-d717-42af-904b-b77b32ac5c43.replay  da07cdec-d058-48cd-add4-26dba8cebaba.replay
rlbot/: CppPythonAgent.cfg  rlbot.cfg  run.bat
src/: ActionParser.cpp  LearnerConfigUtils.cpp  LoggedCombinedReward.cpp  LoggerCombinedReward.cpp  Loggers.cpp  ObsBuilder.cpp  RLBotClient.cpp  Rewards.cpp  States.cpp  TerminalConditions.cpp  main.cpp
src/CeilingPinch/: CeilingPinchUtils.cpp
src/DoubleTap/: DoubleTapUtils.cpp
src/GroundPinch/: GroundPinchUtils.cpp
src/Logging/: LoggableReward.cpp  LoggedCombinedReward.cpp
src/Recovery/: RecoveryUtils.cpp
src/Replays/: CarballHandling.cpp  ReplayFrame.cpp  ReplayLoader.cpp  ReplaySaver.cpp  ReplaySetter.cpp  ReplayUtils.cpp
src/Selector/: SelectorChoice.cpp  SelectorUtils.cpp  Submodel.cpp
src/TeamPinch/: TeamPinchUtils.cpp
src/Utils/: DoubleTapUtils.cpp  LoggingUtils.cpp
src/WallPinch/: WallPinchUtils.cpp
templates/: ConfigTemplate.yaml  main_template.cpp
tests/: CMakeLists.txt
tests/include/: TestsUtils.h
tests/include/Replays/: ReplaysUtils.h
tests/include/Replays/ReplayLoader/: Controls.h  MatchData.h  PhysicsState.h
tests/include/Rewards/: Rewards.h  RewardsUtils.h  ZeroSumTests.h
tests/src/: TestUtils.cpp  test.cpp
tests/src/Replays/: ReplaysUtils.cpp
tests/src/Replays/ReplayLoader/: BoostData.cpp  Controls.cpp  MatchData.cpp  PhysicsState.cpp
tests/src/Rewards/: RewardsUtils.cpp  ZeroSumTests.cpp
tools/: checkpoint_converter.py
(+72 files in other folders)
